Support custom plugins